--- a/homework/index.html
+++ b/homework/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Arrays Homework</title>
+		<title>Day-9 Homework</title>
 	</head>
 	<body>
-		Javascript Arrays
+		Javascript Homework for Day-9
 		<script src ="main.js"></script>
 	</body>
 </html>
