--- a/homework/index.html
+++ b/homework/index.html
@@ -5,6 +5,6 @@
 	</head>
 	<body>
 		Javascript Homework for Day-9
-		<script src ="main.js"></script>
+		<script src ="js/main.js"></script>
 	</body>
 </html>
